[package]
name = "publichat"
version = "0.2.0"
edition = "2021"


[dependencies]
aes = "0.8.1"
base64 = "0.13.0"
ctr = "0.9.1"
sha1_smol = "1.0.0"
sha3 = "0.10.1"
rand = "0.8.5"  # TODO: this too
ed25519-dalek = "1.0.1"
websocket = "0.27.1"
futures = "0.3.31"
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.21"
tungstenite = "0.21"
lazy_static = "1.5.0"

[build-dependencies]
minify-html = { version = "0.8.0", features = ["js-esbuild"], optional = true }

[features]
minify = ["minify-html"]
tls = []
